--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -14,6 +14,6 @@
   ],
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#002140",
+  "background_color": "#42b983",
   "theme_color": "#42b983"
 }
