--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "less-loader": "^7.0.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.21.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
