update :: 更新PWA默认路径 :: 更新文章显示逻辑 :: 分离模块 :: 重写缓存逻辑

--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -12,7 +12,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "index.html",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#42b983",
   "theme_color": "#42b983"
