--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "RssReader",
   "icon": [
     {
-      "src": "./img/icons/android-chrome-192x192",
+      "src": "./img/icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"        },
     {
