update :: 修复 web 自动构建测试配置

--- a/.github/workflows/RssReader_Web_Auto_Build.yml
+++ b/.github/workflows/RssReader_Web_Auto_Build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        node_version: [ 14.x,15.x ]
+        node_version: [ 14.x,13.x ]
 
     steps:
       - name: Checkout
@@ -23,12 +23,8 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
 
-      - name: Install dependencies
+      - name: Install dependencies and Build
         run: |
           cd web
           npm install
-
-      - name: Build
-        run: |
-          cd web
-          npm build
+          npm run build
