update :: 修复 web 自动构建测试配置

--- a/.github/workflows/RssReader_Web_Auto_Build.yml
+++ b/.github/workflows/RssReader_Web_Auto_Build.yml
@@ -27,4 +27,5 @@ jobs:
         run: |
           cd web
           npm install
+          mv src/config.e.js src/config.js
           npm run build
