update :: 修改 action 配置

--- a/.github/workflows/RssReader_Auto_Build_Test.yml
+++ b/.github/workflows/RssReader_Auto_Build_Test.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: ${{ matrix.go }}
+
+      - name: Build
       - run: |
           cd src/main
           go build
