--- a/.github/workflows/RssReader_Auto_Build_Test.yml
+++ b/.github/workflows/RssReader_Auto_Build_Test.yml
@@ -20,6 +20,7 @@ jobs:
           go-version: ${{ matrix.go }}
 
       - name: Build
+      - uses: actions/checkout@v2
       - run: |
           cd src/main
           go build
