--- a/.github/workflows/RssReader_Auto_Build_Test.yml
+++ b/.github/workflows/RssReader_Auto_Build_Test.yml
@@ -13,20 +13,14 @@ jobs:
         go: [ '1.14', '1.13', '1.12' ]
     name: Go ${{ matrix.go }} build
     steps:
-      - name: Unit Test
-      uses: actions/setup-go@v1
+      - uses: actions/checkout@v2
+      - name: Build and Test
+        uses: actions/setup-go@v1
         with:
           go-version: ${{ matrix.go }}
       - run: |
           cd src/apis
           go test
-
-      - uses: actions/checkout@v2
-      - name: Setup go
-        uses: actions/setup-go@v1
-        with:
-          go-version: ${{ matrix.go }}
-      - run: |
-          cd src/main
+          cd ../main
           go build
           ./main test
