--- a/.github/workflows/RssReader_Backend_Build.yml
+++ b/.github/workflows/RssReader_Backend_Build.yml
@@ -1,4 +1,4 @@
-name: RssReader_Auto_Build_Test
+name: RssReader_Auto_Build
 
 on:
   push:
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go: [ '1.18','1.17','1.16','1.15','1.14', '1.13' ]
+        go: [ '1.18','1.17','1.16' ]
     name: Go ${{ matrix.go }} build
     steps:
       - name: Checkout
