--- a/.github/workflows/RssReader_Backend_Build.yml
+++ b/.github/workflows/RssReader_Backend_Build.yml
@@ -27,3 +27,10 @@ jobs:
           cd src/
           go mod tidy
           go build
+
+      - name: Build Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: false
+          tags: johnpoint/rssreader:latest
