--- a/.github/workflows/RssReader_Backend_Build.yml
+++ b/.github/workflows/RssReader_Backend_Build.yml
@@ -31,6 +31,6 @@ jobs:
       - name: Build Docker Image
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: src
           push: false
           tags: johnpoint/rssreader:latest
