--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -7,8 +7,7 @@ WORKDIR /root/service
 COPY RssReader /root/service/bin/
 COPY config_local.yaml /root/service/
 
-RUN /root/service/bin/RssReader
-
 ENV CMDNAME=""
+ENV CONFIGNAME="config_local.yaml"
 
-CMD ["sh","-c","/root/service/bin/RssReader $CMDNAME --config=/root/service/config_local.yaml"]
+CMD ["sh","-c","/root/service/bin/RssReader $CMDNAME --config=/root/service/$CONFIGNAME"]
