docker: fix dockerfile

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -4,10 +4,10 @@ MAINTAINER johnpoint
 ENV TZ=Asia/Shanghai
 
 WORKDIR /root/service
-COPY RssReader /root/service/bin/
-COPY config_local.yaml /root/service/
+COPY RssReader bin/
+COPY config_local.yaml config/
 
 ENV CMDNAME=""
 ENV CONFIGNAME="config_local.yaml"
 
-CMD ["sh","-c","/root/service/bin/RssReader $CMDNAME --config=/root/service/$CONFIGNAME"]
+CMD ["sh","-c","/root/service/bin/RssReader $CMDNAME --config=/root/service/config/$CONFIGNAME"]
