--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,8 +1,7 @@
-FROM caddy:latest
+FROM nginx:stable-alpine
 
-COPY dist /usr/share/caddy/
-COPY Caddyfile /etc/caddy/Caddyfile
+COPY dist /usr/share/nginx/html
+COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
 
 ENV APIADDRESS = "http://127.0.0.1:8080"
-
-CMD cat /etc/caddy/Caddyfile && echo $APIADDRESS > /usr/share/caddy/api_address && caddy run --config /etc/caddy/Caddyfile --adapter caddyfile
+RUN echo $APIADDRESS > /usr/share/nginx/html/api_address
