docker: 环境变量设定后端地址

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -4,4 +4,5 @@ COPY dist /usr/share/nginx/html
 COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
 
 ENV APIADDRESS = "http://127.0.0.1:8080"
-RUN echo $APIADDRESS > /usr/share/nginx/html/api_address
+
+CMD sh -c "echo $APIADDRESS > /usr/share/nginx/html/api_address && nginx -g \"daemon off;\""
