--- a/.github/workflows/RssReader_Web_Build.yml
+++ b/.github/workflows/RssReader_Web_Build.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        node_version: [ 16.x,15.x,14.x,13.x ]
+        node_version: [ 16.x ]
 
     steps:
       - name: Checkout
